# wm-811k-deep-learning

./: .gitignore  README.md  pyproject.toml
notebooks/: 00-wm-811k-EDA.ipynb  01-wm-811k-cnn.ipynb
tables/: classification_report_augmented.md  classification_report_baseline.md  model_comparison.md  training_history_augmented.json  training_history_baseline.json
