[project]
name = "wm-811k"
version = "0.1.0"
description = "CNN Classification of Wafer Defects on WM-811K Dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
